updated create account feature with auto complete for airports and additiional UI formatting for Login/Register

--- a/client/public/assets/app.css
+++ b/client/public/assets/app.css
@@ -14,3 +14,12 @@
     width: 50%;
     padding: 10px;
 }
+
+a{
+    text-decoration: none;
+    color: white;
+}
+
+a:hover {
+    text-decoration:none;
+}
