--- a/client/public/assets/app.css
+++ b/client/public/assets/app.css
@@ -1,7 +1,20 @@
+body{
+    background-color: #000000;
+  padding: 0px;
+  margin: 0px;
+}
 
+#gradient
+{
+ width: 100%;
+ height: 800px;
+ padding: 0px;
+ margin: 0px;
+}
 
 .MuiToolbar-root-40 {
-    background-color: lightgray;
+    background-color: #e7e7e7;
+    color: black;
 }
 
 .MuiTypography-root-53{
@@ -9,11 +22,13 @@
 }
 
 .createAccountForm {
-    background-color: lightgray;
+    background-image: linear-gradient( #e7e7e7, white);
     margin-top: 20px;
     width: 50%;
     padding: 10px;
-    border-radius: 25px;
+    border-radius: 10px;
+
+
 }
 
 a{
@@ -42,7 +57,17 @@ Button{
     float: right;
 }
 
-.HotelDisplay{
-    float: right;
-    width: 75%
+#cardDesign{
+    background-image: linear-gradient( #e7e7e7, white);
+    border-radius: 10px;
 }
+
+#typeHead{
+    padding-top: 30px;
+}
+
+@font-face {
+    font-family: 'Yellowtail', cursive;
+    src: url(https://fonts.googleapis.com/css?family=Yellowtail)
+  }
+
