I changed the user interface on the home page and created a background fade component

--- a/client/public/assets/app.css
+++ b/client/public/assets/app.css
@@ -1,5 +1,7 @@
 
-
+body{
+    background-image: url('assets/fancy-cushion/cubes/clsr.jpg')
+}
 .MuiToolbar-root-40 {
     background-color: lightgray;
 }
