--- a/client/public/assets/app.css
+++ b/client/public/assets/app.css
@@ -7,14 +7,14 @@ body{
 #gradient
 {
  width: 100%;
- height: 800px;
+ height: 1000px;
  padding: 0px;
  margin: 0px;
 }
 
 .MuiToolbar-root-40 {
-    background-color: #e7e7e7;
-    color: black;
+    background-color: black;
+    color: white;
 }
 
 .MuiTypography-root-53{
@@ -27,6 +27,7 @@ body{
     width: 50%;
     padding: 10px;
     border-radius: 10px;
+    box-shadow:5px 5px 30px 5px dimgray;
 
 
 }
@@ -60,6 +61,8 @@ Button{
 #cardDesign{
     background-image: linear-gradient( #e7e7e7, white);
     border-radius: 10px;
+    box-shadow:5px 5px 30px 5px dimgray;
+    padding: 10px
 }
 
 #typeHead{
